syntax = "proto3";
option go_package = "SimpleService/grpc/proto";

message HelloRequest {
    string greeting = 1;
  }
  
  message HelloResponse {
    string reply = 1;
  }

service SimpleService{
    rpc getSimpleMessage (HelloRequest) returns (HelloResponse);
}
